# sumo-sim-monaco-scenario

./: README.md  docker-compose.yaml
simulation_extractions/: .gitignore  README.md  pyproject.toml  setup.sh  task_pipeline.py  test-notbook-google-map.ipynb  visualize_network.py
simulation_extractions/cli_tools/: README.md  generate_kepler_interactive_tool.py  visualise_metric_histogram.py  visualise_metric_histogram_edge.py
simulation_extractions/cli_tools/export/: export_to_geojson.py  export_to_gis_tools.py  export_to_gmap_csv.py  export_to_gmap_html.py  generate_kepler_interactive_tool.py  visualize_network.py
simulation_extractions/cli_tools/simple_analysis/: config_make_aggregation.toml  generate_video.py  make_aggregation.py  visualise_metric_histogram_edge.py  visualise_metric_time_steps_lanes.py  visualization.py  visualization_basic_statistics.py
simulation_extractions/configurations/: .gitignore  fixed_seed_pair_2023_12_17.toml  test_visualization.toml
simulation_extractions/configurations/config_export/: config_export_gis_tools.toml
simulation_extractions/configurations/config_simulation_runs/: fixed_seed_pair_iters_2024_01_02.toml  heavy-blocking-scenario.toml  slow_speed_scenario_iter.toml  (+2 more)
simulation_extractions/investigations/: count_traffic_path_diff.py  visualise_metric_time_steps_lanes.py
simulation_extractions/notebooks/: Untitled-1.py  construct_f1_scenario.py  construction_f1_scenario.ipynb  kepler-test.ipynb
simulation_extractions/script_scenario_construction/: README.md  config.toml  config_heavy_blocking_scenario.toml  make_heavy_blocking_scenario.py  make_sardine_scenario.py  rerouter_heavy_blocking.xml  rerouter_sardine_scenario.xml
simulation_extractions/simulation_extractions/: config_handler.py  get_road_coordinate_simulation.py  get_road_geo_coordinate.py  module_matplotlib.py  parse_fcd_xml.py  parse_road_observation_xml.py  parse_sumo_road_map.py  run_simulation.py
(+38 files in other folders)
