[tool.poetry]
name = "simulation_extractions"
version = "0.1"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [{include = "simulation_extractions"}]

[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.24.2"

scikit-learn = "*"


joblib = "*"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
dask = "2023.5.0"
distributed = "*"
bokeh = {version = "2.4.2", optional = true}  # need for dask dashboard
logzero = "^1.7.0"
tqdm = "^4.66.1"
toml = "^0.10.2"
dacite = "^1.8.1"
shapely = "^2.0.2"

# uniplot = "*"
# torch = "2.0.0"
# wandb = "*"
# pot = "*"
gmaps = "^0.9.0"
ipywidgets = "7.4.2"
ipython-genutils = "^0.2.0"
pyproj = "^3.6.1"
geojson = "^3.1.0"
jsonlines = "^4.0.0"

[tool.poetry.scripts]

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"